# Quant-Trade

./: .gitignore  D4rK4FNgbGcrMrX1YsRDp.json  Justfile  README.md  config.yaml  pyproject.toml
config/: backtest.yaml  data.yaml  model.yaml
docs/: AGENT.md  akshare_map.md  map.md  plan.md  table.md
docs/akshare/: akentry.md  bond_china_yield.md  index_analysis_monthly_sw.md  index_option_1000index_qvix.md  index_stock.md  macro_china_m2_yearly.md  macro_china_market_margin_sh.md  macro_china_market_margin_sz.md  macro_china_pmi_yearly.md  macro_china_ppi_yearly.md  macro_china_shibor_all.md  stock_financial_abstract.md  stock_financial_analysis_indicator.md  stock_hsgt_fund_flow_summary_em.md  stock_hsgt_hist_em.md  stock_individual_basic_info_xq.md  stock_industry_clf_hist_sw.md  stock_info_a_code_name.md  stock_info_sh_delist.md  stock_info_sz_delist.md  stock_lrb_em.md  stock_tfp_em.md  stock_value_em.md  stock_xjll_em.md  stock_zcfz_em.md  stock_zh_a_daily.md  stock_zh_a_hist.md  stock_zh_a_spot_em.md  stock_zh_dupont_comparison_em.md  stock_zh_index_daily_em.md  stock_zh_index_value_csindex.md  sw_index_first_info.md  sw_index_second_info.md  sw_index_third_cons.md  sw_index_third_info.md
docs/plans/: concurrent_request_pattern.md  eastmoney_extension_plan.md  eastmoney_refactoring_plan.md  eastmoney_refactoring_v2.md  lgb_flexible_config.md  lgb_model_persistence.md  stock_hist_migration_plan.md  trait_extraction_plan.md
notebooks/: 01-kline-chart.py
notebooks/__marimo__/session/: 01-kline-chart.py.json
notebooks/utils/: __init__.py  charts.py  data.py
scripts/: smoke_acquisition.py  smoke_train.py
src/quant_trade/: __init__.py  transform.py
src/quant_trade/client/: csindex.py  eastmoney.py  trait.py  traits.py
src/quant_trade/config/: arctic.py  logger.py
src/quant_trade/data/: __init__.py  acquisition.py  clean.py  feature.py  processing.py  validation.py
src/quant_trade/data/provider/: akshare.py  ashare.py  ashare_data.py  stock.py  traits.py  utils.py
src/quant_trade/feature/: __init__.py  feature.py  feature_store.py  process.py  process_.py  query.py  store.py
src/quant_trade/model/: base.py
src/quant_trade/provider/: __init__.py  akshare.py  baostock.py  concurrent.py  traits.py  transform.py  utils.py
src/quant_trade/utils/: __init__.py  logger.py
tests/: conftest.py  conftest_akshare.py  smoke_akshare.py  smoke_bao.py  smoke_store.py  test_client.py  test_client_eastmoney.py  test_concurrent.py  test_data.py  test_data_shown.py  test_processing.py  test_reproduce.py  test_train.py
