[project]
name = "quant-trade"
version = "0.1.0"
description = "Quantitative trading self-learning project"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    # book
    "marimo>=0.19.4",
    # data source
    "akshare>=1.0",
    # data processing
    "numpy>=2.0",
    "narwhals>=1.0",
    "polars>=1.0",
    "pyarrow>=15.0",
    # data visualization
    "plotly>=5.20",
    "seaborn>=0.13",

    "scipy>=1.14",
    "backtrader>=1.9.78.123",

    # logging
    "loguru>=0.7.3",
    # config
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.19.1",
    "ruff>=0.14.13",
    "taskipy>=1.14.1",
    "types-PyYAML",
]
    
[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
# long line is acceptable in format.
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.taskipy.tasks]
test = "pytest tests/"
test-coverage = "pytest tests/ --cov=notebooks/utils --cov-report=html"
test-ci = "pytest tests/ --cov=notebooks/utils --cov-report=term-missing"
lint = "ruff check notebooks/ tests/ src/"
lint-fix = "ruff check --fix notebooks/ tests/ src/"
format = "ruff format notebooks/ tests/ src/"
typecheck = "mypy notebooks/ tests/ src/"
