[project]
name = "quant-trade"
version = "0.1.0"
description = "Quantitative trading self-learning project"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    # book
    "marimo>=0.19.4",
    # data source
    "akshare>=1.0",
    "baostock>=0.8.9",
    # Http
    "httpx[http2]>=0.28.1",
    "tenacity>=9.1.3",
    # data processing
    "numpy>=2.0",
    "narwhals>=1.0",
    "polars>=1.0",
    "pyarrow>=15.0",
    # data visualization
    "plotly>=5.20",
    "seaborn>=0.13",
    # ML
    "scipy>=1.17.0",
    "lightgbm>=4.6.0",
    "optuna>=4.7.0",
    # "backtrader>=1.9.78.123",
    # logging
    "loguru>=0.7.3",
    # config
    # "pyyaml>=6.0.3",
    # database
    "arcticdb>=6.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    # "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.19.1",
    "ruff>=0.14.13",
    # "types-PyYAML",
]
    
[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
# asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
# long line is acceptable in format.
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
